[project]
name = "return-play-api"
version = "0.1.0"
description = "FastAPI backend for the Injury Return-To-Play Tracker."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.111,<0.136.4",
  "psycopg[binary]>=3.2",
  "PyJWT[crypto]>=2.8,<3",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.3",
  "reportlab>=4.2",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pypdf>=4.3",
  "pytest>=8.2",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
